Occupation to numeric, add description

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(lfs_flag_graduate_ons)
 export(lfs_flag_postgraduate)
 export(lfs_flag_teacher)
 export(lfs_load)
+export(lfs_pick_column)
 export(lfs_summarise_hours)
 export(lfs_summarise_salary)
 export(lfs_summarise_unemployment)
