--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(lfs_summarise_salary)
 export(lfs_summarise_unemployment)
 export(lfs_summarise_union)
 export(ons_time_series)
+import(rlang)
+importFrom(glue,glue)
 importFrom(haven,labelled)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
