--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,6 +2,7 @@
 ^README\.Rmd$
 ^\.github$
 ^inst/lfs_data\.Rds$
+^inst/lfs_data\.fst$
 ^inst/active_testing\.R$
 ^variables_report\.csv$
 ^data-raw$
