Added data.table methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(lfs_summarise_salary)
 export(lfs_summarise_unemployment)
 export(lfs_summarise_union)
 export(ons_time_series)
+importFrom(data.table,.N)
 importFrom(glue,glue)
 importFrom(haven,labelled)
 importFrom(lifecycle,deprecated)
