--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -3,6 +3,7 @@
 ^\.github$
 ^inst/lfs_data\.Rds$
 ^inst/lfs_data\.fst$
+^inst/aps_data\.fst$
 ^inst/active_testing\.R$
 ^variables_report\.csv$
 ^data-raw$
