Switched lfs_pick_column to pick, updated vignettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,12 @@ export(lfs_flag_graduate_ons)
 export(lfs_flag_postgraduate)
 export(lfs_flag_teacher)
 export(lfs_load)
-export(lfs_pick_column)
 export(lfs_summarise_hours)
 export(lfs_summarise_salary)
 export(lfs_summarise_unemployment)
 export(lfs_summarise_union)
 export(ons_time_series)
+export(pick)
 importFrom(data.table,.N)
 importFrom(glue,glue)
 importFrom(haven,labelled)
