--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(lfs_load)
 export(lfs_summarise_salary)
 export(lfs_summarise_unemployment)
 export(ons_time_series)
-export(pick)
+export(pick_var)
 importFrom(data.table,.N)
 importFrom(glue,glue)
 importFrom(haven,labelled)
