Deprecated old functions, add warnings, replace with new ones

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(lfs_summarise_salary)
 export(lfs_summarise_unemployment)
 export(ons_time_series)
 export(pick_var)
+export(variable_mapping)
 importFrom(data.table,.N)
 importFrom(glue,glue)
 importFrom(haven,labelled)
