--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,12 +16,13 @@ reference:
   desc: Add a indicator column
   contents:
   - starts_with("lfs_flag")
-- title: Setup 
+- title: Setup
 - subtitle: Convert and Compile
   desc: Convert from `.sav` to `.Rds` and compile to one dataset
   contents:
   - starts_with("lfs_convert")
   - starts_with("lfs_compile")
+  - variable_mapping
   - lfs_load
   - aps_load
 - subtitle: Add custom columns
